tagged + meta data

--- a/jdh001_0000_0002_0237_2532.ipynb
+++ b/jdh001_0000_0002_0237_2532.ipynb
@@ -220,7 +220,7 @@
      "layer": "hermeneutics"
     },
     "tags": [
-     "hermeneutics-step"
+     "hermeneutics"
     ]
    },
    "source": [
@@ -248,7 +248,7 @@
      "layer": "hermeneutics"
     },
     "tags": [
-     "hermeneutics-step"
+     "hermeneutics"
     ]
    },
    "source": [
@@ -262,7 +262,7 @@
      "layer": "hermeneutics"
     },
     "tags": [
-     "hermeneutics-step"
+     "hermeneutics"
     ]
    },
    "source": [
@@ -276,7 +276,7 @@
      "layer": "hermeneutics"
     },
     "tags": [
-     "hermeneutics-step"
+     "hermeneutics"
     ]
    },
    "source": [
@@ -290,7 +290,7 @@
      "layer": "hermeneutics"
     },
     "tags": [
-     "hermeneutics-step"
+     "hermeneutics"
     ]
    },
    "source": [
