added hermeneutics blocks

--- a/jdh001_0000_0002_0237_2532.ipynb
+++ b/jdh001_0000_0002_0237_2532.ipynb
@@ -248,7 +248,7 @@
      "layer": "hermeneutics"
     },
     "tags": [
-     "hermeneutics"
+     "hermeneutics-step"
     ]
    },
    "source": [
@@ -262,7 +262,8 @@
      "layer": "hermeneutics"
     },
     "tags": [
-     "hermeneutics"
+     "hermeneutics-step",
+     "tool-dmi-tcat"
     ]
    },
    "source": [
@@ -276,7 +277,7 @@
      "layer": "hermeneutics"
     },
     "tags": [
-     "hermeneutics"
+     "hermeneutics-step"
     ]
    },
    "source": [
@@ -290,7 +291,7 @@
      "layer": "hermeneutics"
     },
     "tags": [
-     "hermeneutics"
+     "hermeneutics-step"
     ]
    },
    "source": [
@@ -363,11 +364,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
-    "jdh": {
-     "layer": "hermeneutics"
-    }
+    "tags": [
+     "narrative"
+    ]
    },
    "outputs": [
     {
@@ -396,12 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "tags": [
-     "hermeneutics",
-     "narrative"
-    ]
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -8935,7 +8931,7 @@
      "layer": "hermeneutics"
     },
     "tags": [
-     "hermeneutics"
+     "hermeneutics-step"
     ]
    },
    "source": [
@@ -8949,7 +8945,7 @@
      "layer": "hermeneutics"
     },
     "tags": [
-     "hermeneutics"
+     "hermeneutics-step"
     ]
    },
    "source": [
@@ -8964,7 +8960,7 @@
      "layer": "hermeneutics"
     },
     "tags": [
-     "hermeneutics"
+     "hermeneutics-step"
     ]
    },
    "source": [
@@ -8988,7 +8984,7 @@
      "layer": "hermeneutics"
     },
     "tags": [
-     "hermeneutics"
+     "hermeneutics-step"
     ]
    },
    "source": [
@@ -9005,7 +9001,7 @@
      "layer": "hermeneutics"
     },
     "tags": [
-     "hermeneutics"
+     "hermeneutics-step"
     ]
    },
    "source": [
@@ -9049,7 +9045,7 @@
      "layer": "hermeneutics"
     },
     "tags": [
-     "hermeneutics"
+     "hermeneutics-step"
     ]
    },
    "source": [
@@ -9070,11 +9066,11 @@
      "layer": "hermeneutics"
     },
     "tags": [
-     "hermeneutics"
+     "hermeneutics-step"
     ]
    },
    "source": [
-    "**The method to parse the file**"
+    "### The method to parse the file"
    ]
   },
   {
@@ -9083,7 +9079,10 @@
    "metadata": {
     "jdh": {
      "layer": "hermeneutics"
-    }
+    },
+    "tags": [
+     "hermeneutics-step"
+    ]
    },
    "outputs": [],
    "source": [
@@ -9101,7 +9100,10 @@
    "metadata": {
     "jdh": {
      "layer": "hermeneutics"
-    }
+    },
+    "tags": [
+     "hermeneutics-step"
+    ]
    },
    "outputs": [],
    "source": [
@@ -9173,7 +9175,10 @@
    "metadata": {
     "jdh": {
      "layer": "hermeneutics"
-    }
+    },
+    "tags": [
+     "hermeneutics-step"
+    ]
    },
    "outputs": [],
    "source": [
@@ -9187,7 +9192,10 @@
    "metadata": {
     "jdh": {
      "layer": "hermeneutics"
-    }
+    },
+    "tags": [
+     "hermeneutics-step"
+    ]
    },
    "outputs": [
     {
@@ -9211,7 +9219,10 @@
    "metadata": {
     "jdh": {
      "layer": "hermeneutics"
-    }
+    },
+    "tags": [
+     "hermeneutics-step"
+    ]
    },
    "outputs": [
     {
@@ -9235,7 +9246,10 @@
    "metadata": {
     "jdh": {
      "layer": "hermeneutics"
-    }
+    },
+    "tags": [
+     "hermeneutics-step"
+    ]
    },
    "outputs": [],
    "source": [
@@ -9248,7 +9262,10 @@
    "metadata": {
     "jdh": {
      "layer": "hermeneutics"
-    }
+    },
+    "tags": [
+     "hermeneutics-step"
+    ]
    },
    "outputs": [
     {
@@ -9399,11 +9416,11 @@
      "layer": "hermeneutics"
     },
     "tags": [
-     "hermeneutics"
+     "hermeneutics-step"
     ]
    },
    "source": [
-    "**The dataframe with date and the differents topics**"
+    "### The dataframe with date and the differents topics"
    ]
   },
   {
@@ -9412,7 +9429,10 @@
    "metadata": {
     "jdh": {
      "layer": "hermeneutics"
-    }
+    },
+    "tags": [
+     "hermeneutics-step"
+    ]
    },
    "outputs": [
     {
@@ -9561,7 +9581,10 @@
    "metadata": {
     "jdh": {
      "layer": "hermeneutics"
-    }
+    },
+    "tags": [
+     "hermeneutics-step"
+    ]
    },
    "outputs": [
     {
@@ -9588,7 +9611,10 @@
    "metadata": {
     "jdh": {
      "layer": "hermeneutics"
-    }
+    },
+    "tags": [
+     "hermeneutics-step"
+    ]
    },
    "outputs": [
     {
@@ -9618,7 +9644,10 @@
    "metadata": {
     "jdh": {
      "layer": "hermeneutics"
-    }
+    },
+    "tags": [
+     "hermeneutics-step"
+    ]
    },
    "outputs": [
     {
@@ -9752,7 +9781,10 @@
    "metadata": {
     "jdh": {
      "layer": "hermeneutics"
-    }
+    },
+    "tags": [
+     "hermeneutics-step"
+    ]
    },
    "outputs": [
     {
@@ -10078,7 +10110,10 @@
    "metadata": {
     "jdh": {
      "layer": "hermeneutics"
-    }
+    },
+    "tags": [
+     "hermeneutics-step"
+    ]
    },
    "outputs": [
     {
@@ -10118,7 +10153,10 @@
    "metadata": {
     "jdh": {
      "layer": "hermeneutics"
-    }
+    },
+    "tags": [
+     "hermeneutics-step"
+    ]
    },
    "outputs": [
     {
@@ -10149,7 +10187,10 @@
    "metadata": {
     "jdh": {
      "layer": "hermeneutics"
-    }
+    },
+    "tags": [
+     "hermeneutics-step"
+    ]
    },
    "outputs": [],
    "source": [
@@ -10165,7 +10206,10 @@
    "metadata": {
     "jdh": {
      "layer": "hermeneutics"
-    }
+    },
+    "tags": [
+     "hermeneutics-step"
+    ]
    },
    "outputs": [
     {
@@ -10489,7 +10533,10 @@
    "metadata": {
     "jdh": {
      "layer": "hermeneutics"
-    }
+    },
+    "tags": [
+     "hermeneutics-step"
+    ]
    },
    "outputs": [
     {
@@ -12130,7 +12177,7 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Éditer les Méta-Données",
+  "celltoolbar": "Tags",
   "cite2c": {
    "citations": {
     "4583/8ZRVMNQT": {
@@ -12656,7 +12703,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.3"
   },
   "toc": {
    "base_numbering": 1,
